# dupe-engine

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.worker  Duplicate Checker Calibration Record.md  Duplicate Checker Pilot Preparation Plan.md  ENGINE_NOTES.md  ONBOARDING.md  PILOT_AWS_DEPLOY_CHECKLIST.md  PILOT_REVIEW_LABELS.md  PILOT_SMOKE_TEST.md  PILOT_UI_SKETCH.md  README.md  V0108_PATCH_APPLIED.md  V0_10_0_HANDOFF.md  V0_10_1_HANDOFF.md  V0_10_2_HANDOFF.md  V0_10_3_HANDOFF.md  V0_10_4_HANDOFF.md  V0_10_5_HANDOFF.md  V0_10_6_HANDOFF.md  V0_10_7_HANDOFF.md  V0_4_HANDOFF.md  V0_6_HANDOFF.md  V0_7_5_HANDOFF.md  V0_7_6_HANDOFF.md  V0_7_HANDOFF.md  V0_8_1_HANDOFF.md  V0_8_2_HANDOFF.md  V0_8_3_HANDOFF.md  V0_8_4_HANDOFF.md  V0_8_5_HANDOFF.md  V0_8_6_HANDOFF.md  V0_8_HANDOFF.md  V0_9_1_HANDOFF.md  V0_9_2_HANDOFF.md  V0_9_3_HANDOFF.md  V0_9_5_HANDOFF.md  V0_9_6_HANDOFF.md  (+11 more)
config/: server_guardrails.example.json
docs/: ARCHITECTURE.md  CALIBRATION_PLAN.md  DETECTION_VS_ADJUDICATION.md  DETERMINISTIC_MULTIPASS.md  INCIDENT_RESPONSE.html  ITERATION_DECISION_LOG.md  MEDICAL_RECORDS_SORTER_V0_9_DESIGN_SPEC.md  OCR_SETUP_AND_TESTING_GUIDE.md  OPENAI_PROVIDER_NOTES.md  ROADMAP.md  SYNTHETIC_V4_HOLDOUT_SPEC.md  UI_RUN_ARTIFACTS.md  V0108_NEXT_EXPERIMENT.md  V0108_RELEASE_NOTES.md  V0_10_0_LLM_CALIBRATION_ANALYSIS.md  V0_10_1_SOURCE_SAFE_MULTIVIEW.md  V0_10_2_CALIBRATION_LOOP.md  V0_10_3_PARALLEL_CANDIDATE_CALIBRATION.md  V0_10_4_PARALLEL_TUI_CALIBRATION.md  V0_10_5_HIGH_PARALLEL_RECALL_STRESS.md  V0_10_7_SERVER_CONTINUOUS_CALIBRATION.md  V0_6_EMBEDDINGS.md  (+25 more)
(+212 files in other folders)
