[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dupe-engine"
version = "0.10.9"
description = "Layered PDF duplicate detection engine with OCR/AI provisions and an integrated local medical-record review UI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pymupdf>=1.23",
  "pillow>=10",
  "scikit-learn>=1.3",
  "numpy>=1.24",
  "pytesseract>=0.3",
  "openai>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
aws = ["boto3>=1.34"]

[project.scripts]
dupe-engine = "dupe_engine.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dupe_engine = ["review_ui_static/*"]
